SPI+UART submission

--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=  \
 ../01-LIB/ \
 ../02-MCAL/ \
 ../02-MCAL/DIO_Git/ \
+../02-MCAL/SPI/ \
 ../02-MCAL/UART/ \
 ../03-HAL/ \
 ../03-HAL/LED/
@@ -45,9 +46,10 @@ SUBDIRS :=  \
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
 ../02-MCAL/DIO_Git/DIO.c \
+../02-MCAL/SPI/SPI_implementation.c \
 ../02-MCAL/UART/UART.c \
 ../03-HAL/LED/LED.c \
-../main.c
+../UART_SPI_Slave_main.c
 
 
 PREPROCESSING_SRCS += 
@@ -58,27 +60,31 @@ ASM_SRCS +=
 
 OBJS +=  \
 02-MCAL/DIO_Git/DIO.o \
+02-MCAL/SPI/SPI_implementation.o \
 02-MCAL/UART/UART.o \
 03-HAL/LED/LED.o \
-main.o
+UART_SPI_Slave_main.o
 
 OBJS_AS_ARGS +=  \
 02-MCAL/DIO_Git/DIO.o \
+02-MCAL/SPI/SPI_implementation.o \
 02-MCAL/UART/UART.o \
 03-HAL/LED/LED.o \
-main.o
+UART_SPI_Slave_main.o
 
 C_DEPS +=  \
 02-MCAL/DIO_Git/DIO.d \
+02-MCAL/SPI/SPI_implementation.d \
 02-MCAL/UART/UART.d \
 03-HAL/LED/LED.d \
-main.d
+UART_SPI_Slave_main.d
 
 C_DEPS_AS_ARGS +=  \
 02-MCAL/DIO_Git/DIO.d \
+02-MCAL/SPI/SPI_implementation.d \
 02-MCAL/UART/UART.d \
 03-HAL/LED/LED.d \
-main.d
+UART_SPI_Slave_main.d
 
 OUTPUT_FILE_PATH +=Sprint6_COMM.elf
 
@@ -101,6 +107,13 @@ LINKER_SCRIPT_DEP+=
 	@echo Finished building: $<
 	
 
+02-MCAL/SPI/SPI_implementation.o: ../02-MCAL/SPI/SPI_implementation.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 02-MCAL/UART/UART.o: ../02-MCAL/UART/UART.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -115,7 +128,7 @@ LINKER_SCRIPT_DEP+=
 	@echo Finished building: $<
 	
 
-./main.o: .././main.c
+./UART_SPI_Slave_main.o: .././UART_SPI_Slave_main.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
