--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -36,12 +36,14 @@ SUBDIRS :=  \
 ../01-LIB/ \
 ../01-LIB/ \
 ../02-MCAL/ \
-../02-MCAL/I2C/
+../02-MCAL/I2C/ \
+../02-MCAL/UART/
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../02-MCAL/I2C/UART.c \
+../02-MCAL/I2C/I2C.c \
+../02-MCAL/UART/UART.c \
 ../main.c
 
 
@@ -52,19 +54,23 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-02-MCAL/I2C/UART.o \
+02-MCAL/I2C/I2C.o \
+02-MCAL/UART/UART.o \
 main.o
 
 OBJS_AS_ARGS +=  \
-02-MCAL/I2C/UART.o \
+02-MCAL/I2C/I2C.o \
+02-MCAL/UART/UART.o \
 main.o
 
 C_DEPS +=  \
-02-MCAL/I2C/UART.d \
+02-MCAL/I2C/I2C.d \
+02-MCAL/UART/UART.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
-02-MCAL/I2C/UART.d \
+02-MCAL/I2C/I2C.d \
+02-MCAL/UART/UART.d \
 main.d
 
 OUTPUT_FILE_PATH +=Sprint6_COMM.elf
@@ -81,7 +87,14 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
-02-MCAL/I2C/UART.o: ../02-MCAL/I2C/UART.c
+02-MCAL/I2C/I2C.o: ../02-MCAL/I2C/I2C.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+02-MCAL/UART/UART.o: ../02-MCAL/UART/UART.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
