Commting changes to I2C

--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -44,7 +44,7 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../02-MCAL/I2C/I2C.c \
 ../02-MCAL/UART/UART.c \
-../main.c
+../master_main.c
 
 
 PREPROCESSING_SRCS += 
@@ -56,22 +56,22 @@ ASM_SRCS +=
 OBJS +=  \
 02-MCAL/I2C/I2C.o \
 02-MCAL/UART/UART.o \
-main.o
+master_main.o
 
 OBJS_AS_ARGS +=  \
 02-MCAL/I2C/I2C.o \
 02-MCAL/UART/UART.o \
-main.o
+master_main.o
 
 C_DEPS +=  \
 02-MCAL/I2C/I2C.d \
 02-MCAL/UART/UART.d \
-main.d
+master_main.d
 
 C_DEPS_AS_ARGS +=  \
 02-MCAL/I2C/I2C.d \
 02-MCAL/UART/UART.d \
-main.d
+master_main.d
 
 OUTPUT_FILE_PATH +=Sprint6_COMM.elf
 
@@ -101,7 +101,7 @@ LINKER_SCRIPT_DEP+=
 	@echo Finished building: $<
 	
 
-./main.o: .././main.c
+./master_main.o: .././master_main.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
